--- a/more.html
+++ b/more.html
@@ -19,5 +19,6 @@
     <p>about more is coming soon..</p>
 <a href="index.html">go back to home</a>
 <a href="home.html">go </a>
+<img scr="bloosom riven.png" height:auto; width:800px;/>
   </body>
 </html>
