--- a/more.html
+++ b/more.html
@@ -19,6 +19,8 @@
     <p>about more is coming soon..</p>
 <a href="index.html">go back to home</a>
 <a href="home.html">go </a>
-<img scr="bloosom riven.png" height:auto; width:800px;/>
+    <div>
+<img scr="images/bloosom riven.png" height:auto; width:800px;/>
+    </div>
   </body>
 </html>
