--- a/more.html
+++ b/more.html
@@ -19,7 +19,7 @@
     <p>about more is coming soon..</p>
 <a href="index.html">go back to home</a>
 <a href="home.html">go </a>
-    <div>
+    <div> hi
 <img scr="images/bloosom riven.png" height:auto; width:800px;/>
     </div>
   </body>
