--- a/more.html
+++ b/more.html
@@ -18,8 +18,8 @@
     <h1>MORE</h1>
     <p>about more is coming soon..</p>
 <a href="index.html">go back to home</a>
-<a href="home.html">go </a>
-    <div> hi
+<a href="home.html">go  hi</a>
+    <div>
 <img scr="images/bloosom riven.png" height:auto; width:800px;/>
     </div>
   </body>
