--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="home.html">CONTENT</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="more.html">MORE</a></li>
+           <li><a href="contact Us.html">MORE</a></li>
         </ul>
     </div>
 
