--- a/contact Us.html
+++ b/contact Us.html
@@ -9,7 +9,7 @@
   </head>
   <body>
   <div>
-    <img src="IMAGES\blossom riven.png" alt="riven" height="auto" width="800px">
+    <img src="images\blossom riven.png" alt="riven" height="auto" width="800px">
 </div>
   </body>
 </html>
